--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-select": "^5.8.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
+    "zod": "^3.23.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
